--- a/applications/spire/values.yaml
+++ b/applications/spire/values.yaml
@@ -1,4 +1,7 @@
-# https://github.com/spiffe/helm-charts-hardened/blob/main/charts/spire/values.yaml
+# Copyright AGNTCY Contributors (https://github.com/agntcy)
+# SPDX-License-Identifier: Apache-2.0
+
+# Ref: https://github.com/spiffe/helm-charts-hardened/blob/main/charts/spire/values.yaml
 
 global:
   spire:
