feat: add configurable dev/prod deployments
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applications/dir-admin/dev/values.yaml
+++ b/applications/dir-admin/dev/values.yaml
@@ -1,6 +1,3 @@
-# Copyright AGNTCY Contributors (https://github.com/agntcy)
-# SPDX-License-Identifier: Apache-2.0
-
 # Ref: https://github.com/agntcy/dir/blob/main/install/charts/dirctl/values.yaml
 
 # Global config
@@ -20,12 +17,16 @@ image:
 # SPIRE configuration
 spire:
   enabled: true
-  trustDomain: example.org
+  trustDomain: dev.directory.outshift
 
 # Additional environment variables (applied to all cronjobs)
 env:
   - name: DIRECTORY_CLIENT_SERVER_ADDRESS
-    value: dir-appset-dir-apiserver.dir.svc.cluster.local:8888
+    value: dir-dir-dev-argoapp-apiserver.dir-dev-dir.svc.cluster.local:8888
+  - name: DIRECTORY_CLIENT_AUTH_MODE
+    value: "x509"
+  - name: DIRECTORY_CLIENT_JWT_AUDIENCE
+    value: "spiffe://dev.directory.outshift/spire/server"
 
 # CronJobs configuration
 cronjobs:
