--- a/applicationsets/dir/prod/applicationset.yaml
+++ b/applicationsets/dir/prod/applicationset.yaml
@@ -1,10 +1,7 @@
-# Copyright AGNTCY Contributors (https://github.com/agntcy)
-# SPDX-License-Identifier: Apache-2.0
-
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: "dir-appset"
+  name: "dir-prod-appset"
 spec:
   syncPolicy:
     preserveResourcesOnDeletion: false
@@ -16,16 +13,16 @@ spec:
           - list:
               elements:
                 - appName: spire-crds
-                  namespace: spire-crds
+                  namespace: dir-prod-spire-crds
                   syncWave: "0"
                 - appName: spire
-                  namespace: spire
+                  namespace: dir-prod-spire
                   syncWave: "1"
                 - appName: dir
-                  namespace: dir
+                  namespace: dir-prod-dir
                   syncWave: "2"
                 - appName: dir-admin
-                  namespace: dir-admin
+                  namespace: dir-prod-dir-admin
                   syncWave: "3"
           # Get cluster config to set the cluster address
           - matrix:
@@ -40,7 +37,7 @@ spec:
                     repoURL: "https://github.com/ramizpolic/dir-deploy"
                     revision: main
                     files:
-                      - path: "clusters/dir/cluster-config.json"
+                      - path: "clusters/dir/prod/a/cluster-config.json"
           # Get app config to set chart details
           - matrix:
               generators:
@@ -54,16 +51,17 @@ spec:
                     repoURL: "https://github.com/ramizpolic/dir-deploy"
                     revision: main
                     files:
-                      - path: "applications/{{ appName }}/config.json"
+                      - path: "applications/{{ appName }}/prod/config.json"
   template:
     metadata:
-      name: "dir-appset-{{ appName }}"
+      name: "{{ appName }}-dir-prod-argoapp"
       labels:
         app: "{{ appName }}"
+        env: "prod"
       annotations:
         argocd.argoproj.io/sync-wave: "{{ syncWave }}"
     spec:
-      project: "dir"
+      project: "dir-prod"
       sources:
         - repoURL: "{{ chart_repo }}"
           chart: "{{ chart_name }}"
@@ -72,9 +70,9 @@ spec:
             ignoreMissingValueFiles: true
             valueFiles:
               # Default values file
-              - "$values/applications/{{ appName }}/values.yaml"
+              - "$values/applications/{{ appName }}/prod/values.yaml"
               # Generated values file, usually created by scripts
-              - "$values/applications/{{ appName }}/gen.values.yaml"
+              - "$values/applications/{{ appName }}/prod/gen.values.yaml"
         - repoURL: "https://github.com/ramizpolic/dir-deploy"
           targetRevision: main
           ref: values
