--- a/projects/dir/dev/dir-dev.yaml
+++ b/projects/dir/dev/dir-dev.yaml
@@ -1,13 +1,10 @@
-# Copyright AGNTCY Contributors (https://github.com/agntcy)
-# SPDX-License-Identifier: Apache-2.0
-
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: dir
+  name: dir-dev
   namespace: argocd
 spec:
-  description: AGNTCY Directory Project
+  description: AGNTCY Directory Project - Dev
   destinations:
   - name: '*'
     namespace: '*'
@@ -19,8 +16,8 @@ spec:
   - group: '*'
     kind: '*'
   sourceRepos:
+  - https://chartmuseum.prod.eticloud.io
   - https://github.com/ramizpolic/dir-deploy
   - https://spiffe.github.io/helm-charts-hardened
-  - https://github.com/agntcy
   - ghcr.io
 status: {}
