fix: use v0.4.0 for dir deployment resources
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applications/dir-admin/dev/values.yaml
+++ b/applications/dir-admin/dev/values.yaml
@@ -10,7 +10,7 @@ global:
 # Image config
 image:
   repository: ghcr.io/agntcy/dir-ctl
-  tag: latest
+  tag: v0.4.0
   pullPolicy: IfNotPresent
   pullSecrets: []
 
